--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4370 2024/12/13 16:41:14 taca Exp $
+# $NetBSD: Makefile,v 1.4371 2024/12/13 16:43:28 taca Exp $
 #
 
 COMMENT=	Development utilities
@@ -3259,6 +3259,7 @@ SUBDIR+=	ruby-abstract
 SUBDIR+=	ruby-activejob61
 SUBDIR+=	ruby-activejob70
 SUBDIR+=	ruby-activejob71
+SUBDIR+=	ruby-activejob72
 SUBDIR+=	ruby-activemodel61
 SUBDIR+=	ruby-activemodel70
 SUBDIR+=	ruby-activemodel71
