--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1827 2024/12/13 16:48:46 taca Exp $
+# $NetBSD: Makefile,v 1.1828 2024/12/13 16:51:30 taca Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -969,6 +969,7 @@ SUBDIR+=	ruby-actioncable71
 SUBDIR+=	ruby-actionpack61
 SUBDIR+=	ruby-actionpack70
 SUBDIR+=	ruby-actionpack71
+SUBDIR+=	ruby-actionpack72
 SUBDIR+=	ruby-actionview61
 SUBDIR+=	ruby-actionview70
 SUBDIR+=	ruby-actionview71
