--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1828 2024/12/13 16:51:30 taca Exp $
+# $NetBSD: Makefile,v 1.1829 2024/12/13 16:53:39 taca Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -966,6 +966,7 @@ SUBDIR+=	restish
 SUBDIR+=	ruby-actioncable61
 SUBDIR+=	ruby-actioncable70
 SUBDIR+=	ruby-actioncable71
+SUBDIR+=	ruby-actioncable72
 SUBDIR+=	ruby-actionpack61
 SUBDIR+=	ruby-actionpack70
 SUBDIR+=	ruby-actionpack71
