--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1490 2024/12/09 15:40:39 taca Exp $
+# $NetBSD: Makefile,v 1.1491 2024/12/13 17:03:24 taca Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -1261,6 +1261,7 @@ SUBDIR+=	ruby-actionpack-xml_parser
 SUBDIR+=	ruby-actiontext61
 SUBDIR+=	ruby-actiontext70
 SUBDIR+=	ruby-actiontext71
+SUBDIR+=	ruby-actiontext72
 SUBDIR+=	ruby-albino
 SUBDIR+=	ruby-amrita
 SUBDIR+=	ruby-asciidoctor
