--- a/net/bind918/Makefile
+++ b/net/bind918/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.42 2024/11/14 22:21:03 wiz Exp $
+# $NetBSD: Makefile,v 1.43 2024/12/13 17:29:56 taca Exp $
 
 DISTNAME=	bind-${BIND_VERSION}
 PKGNAME=	${DISTNAME:S/-P/pl/}
-PKGREVISION=	3
 CATEGORIES=	net
 MASTER_SITES=	https://downloads.isc.org/isc/bind9/${BIND_VERSION}/
 EXTRACT_SUFX=	.tar.xz
@@ -16,7 +15,7 @@ CONFLICTS+=	host-[0-9]*
 
 MAKE_JOBS_SAFE=	no
 
-BIND_VERSION=	9.18.31
+BIND_VERSION=	9.18.32
 
 BUILD_DEFS+=	BIND_DIR VARBASE
 
@@ -59,7 +58,7 @@ PKG_USERS=		${BIND_USER}:${BIND_GROUP}
 PKG_GECOS.${BIND_USER}=	Named pseudo-user
 PKG_HOME.${BIND_USER}=	${BIND_DIR}
 
-DOCS=			CHANGES OPTIONS.md README.md
+DOCS=			OPTIONS.md README.md
 
 FILES_SUBST+=		BIND_GROUP=${BIND_GROUP} \
 			BIND_USER=${BIND_USER} PAX=${PAX:Q} \
