--- a/sysutils/R-sys/Makefile
+++ b/sysutils/R-sys/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2024/01/20 02:58:38 mef Exp $
+# $NetBSD: Makefile,v 1.6 2024/12/13 23:56:27 mef Exp $
 
 R_PKGNAME=	sys
-R_PKGVER=	3.4.2
+R_PKGVER=	3.4.3
 CATEGORIES=	sysutils
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -11,7 +11,12 @@ LICENSE=	mit
 TEST_DEPENDS+=	R-spelling-[0-9]*:../../textproc/R-spelling
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
 TEST_DEPENDS+=	R-unix-[0-9]*:../../sysutils/R-unix
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
 TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
