--- a/sysutils/R-unix/Makefile
+++ b/sysutils/R-unix/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2024/01/20 02:33:58 mef Exp $
+# $NetBSD: Makefile,v 1.4 2024/12/14 00:05:56 mef Exp $
 
 R_PKGNAME=	unix
-R_PKGVER=	1.5.6
+R_PKGVER=	1.5.9
 CATEGORIES=	sysutils
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -9,8 +9,12 @@ COMMENT=	POSIX System Utilities
 LICENSE=	mit	# + file LICENSE
 
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
-TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
 TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
