--- a/sysutils/R-xopen/Makefile
+++ b/sysutils/R-xopen/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2023/08/15 01:21:17 mef Exp $
+# $NetBSD: Makefile,v 1.3 2024/12/14 00:15:19 mef Exp $
 
 R_PKGNAME=	xopen
-R_PKGVER=	1.0.0
+R_PKGVER=	1.0.1
 CATEGORIES=	sysutils
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -9,6 +9,14 @@ COMMENT=	Open system files, 'URLs', anything
 LICENSE=	mit
 
 DEPENDS+=	R-processx>=3.8.2:../../sysutils/R-processx
+
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	# none
 
