--- a/net/R-pingr/Makefile
+++ b/net/R-pingr/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2023/08/15 01:21:16 mef Exp $
+# $NetBSD: Makefile,v 1.5 2024/12/14 00:55:59 mef Exp $
 
 R_PKGNAME=	pingr
-R_PKGVER=	2.0.2
+R_PKGVER=	2.0.4
 CATEGORIES=	net
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -10,8 +10,14 @@ LICENSE=	mit	# + file LICENSE
 
 DEPENDS+=	R-processx>=3.8.1:../../sysutils/R-processx
 
-# may conflict with tex-tetex-3.0.50602nb1
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
 TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
