--- a/devel/R-magrittr/Makefile
+++ b/devel/R-magrittr/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2022/04/28 15:46:57 mef Exp $
+# $NetBSD: Makefile,v 1.7 2024/12/14 09:53:54 mef Exp $
 
 R_PKGNAME=	magrittr
 R_PKGVER=	2.0.3
@@ -7,6 +7,20 @@ CATEGORIES=	devel
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Forward-pipe operator for R
 LICENSE=	mit
+
+TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
+TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
+TEST_DEPENDS+=	R-rlang-[0-9]*:../../devel/R-rlang
+TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+# !pdfTeX error: pdflatex (file tctt0900): Font tctt0900 at 600 not found
+ 
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
