--- a/devel/R-lifecycle/Makefile
+++ b/devel/R-lifecycle/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2024/12/14 09:34:02 mef Exp $
+# $NetBSD: Makefile,v 1.8 2024/12/14 10:57:39 jperkin Exp $
 
 R_PKGNAME=	lifecycle
 R_PKGVER=	1.0.4
@@ -9,7 +9,7 @@ COMMENT=	Manage the Life Cycle of your Package Functions
 LICENSE=	gnu-gpl-v3
 
 DEPENDS+=	R-glue>=1.3.1:../../devel/R-glue
-DEPENDS+=	R-rlang>=l.1.0:../../devel/R-rlang
+DEPENDS+=	R-rlang>=1.1.0:../../devel/R-rlang
 DEPENDS+=	R-cli>=3.4.0:../../devel/R-cli
 
 # Package suggested but not available: 'tidyverse'
