--- a/mail/ruby-roadie-rails/Makefile
+++ b/mail/ruby-roadie-rails/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2024/11/06 16:16:46 taca Exp $
+# $NetBSD: Makefile,v 1.11 2024/12/14 11:13:08 taca Exp $
 
 DISTNAME=	roadie-rails-3.2.0
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME:S/rails/rails${RUBY_RAILS}/}
@@ -14,7 +14,7 @@ DEPENDS+=	${RUBY_PKGPREFIX}-roadie>=5.0<6:../../mail/ruby-roadie
 
 USE_LANGUAGES=	# none
 
-RUBY_RAILS_ACCEPTED=	61
+RUBY_RAILS_ACCEPTED=	61 72
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
