--- a/games/monsterz/Makefile
+++ b/games/monsterz/Makefile
@@ -1,27 +1,33 @@
-# $NetBSD: Makefile,v 1.29 2023/10/29 17:56:02 wiz Exp $
+# $NetBSD: Makefile,v 1.30 2024/12/14 17:11:08 wiz Exp $
 
-DISTNAME=		monsterz-0.7.1
-PKGREVISION=		9
+DISTNAME=		monsterz-0.8
 CATEGORIES=		games
-MASTER_SITES=		http://sam.zoy.org/monsterz/
+MASTER_SITES=		${MASTER_SITE_GITHUB:=0-wiz-0/}
+GITHUB_TAG=		v${PKGVERSION_NOREV}
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
-HOMEPAGE=		http://sam.zoy.org/monsterz/
+HOMEPAGE=		https://github.com/0-wiz-0/monsterz
 COMMENT=		Puzzle game similar to the famous Bejeweled or Zookeeper
+# closest match
+LICENSE=		public-domain
 
-DEPENDS+=		${PYPKGPREFIX}-game-[0-9]*:../../devel/py27-game
+DEPENDS+=		${PYPKGPREFIX}-game-[0-9]*:../../devel/py-game
 
 REPLACE_PYTHON=			monsterz.py
-PYTHON_VERSIONS_ACCEPTED=	27
 
-MAKE_ENV+=		GAMEOWN=${GAMEOWN:Q}
-MAKE_ENV+=		GAMEGRP=${GAMEGRP:Q}
+MAKE_FLAGS+=		prefix=${PREFIX}
+MAKE_FLAGS+=		gamesdir=${PREFIX}/bin
+MAKE_FLAGS+=		scoredir=${VARBASE}/games
+MAKE_ENV+=		GAMEOWN=${GAMES_USER:Q}
+MAKE_ENV+=		GAMEGRP=${GAMES_GROUP:Q}
 MAKE_ENV+=		VARBASE=${VARBASE}
 
-SETGIDGAME=		yes
+USE_GAMESGROUP=		yes
 CONF_FILES_PERMS+=	/dev/null ${VARBASE}/games/monsterz \
 			${GAMES_USER} ${GAMES_GROUP} ${GAMEDATAMODE}
 SPECIAL_PERMS=		bin/monsterz ${SETGID_GAMES_PERMS}
+
+BUILD_DEFS+=		VARBASE
 
 .include "../../lang/python/application.mk"
 .include "../../mk/bsd.pkg.mk"
