--- a/textproc/R-htmltools/Makefile
+++ b/textproc/R-htmltools/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2023/03/12 05:40:48 mef Exp $
+# $NetBSD: Makefile,v 1.10 2024/12/15 07:39:53 mef Exp $
 
 R_PKGNAME=	htmltools
-R_PKGVER=	0.5.4
+R_PKGVER=	0.5.8.1
 CATEGORIES=	textproc
 
 MAINTAINER=	minskim@NetBSD.org
@@ -17,10 +17,17 @@ DEPENDS+=	R-ellipsis-[0-9]*:../../math/R-ellipsis
 # Packages suggested but not available:  'ragg'
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
 TEST_DEPENDS+=	R-Cairo-[0-9]*:../../graphics/R-Cairo
-#EST_DEPENDS+=	R-ragg-[0-9]*:../../graphics/R-ragg
 TEST_DEPENDS+=	R-shiny-[0-9]*:../../www/R-shiny
 TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
 TEST_DEPENDS+=	R-ragg-[0-9]*:../../graphics/R-ragg
+
+# !pdfTeX error: pdflatex (file tctt0900): Font tctt0900 at 600 not found
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES+=	c c++
 
