--- a/www/py-curl/Makefile
+++ b/www/py-curl/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.95 2024/11/14 22:22:10 wiz Exp $
+# $NetBSD: Makefile,v 1.96 2024/12/15 09:36:26 adam Exp $
 
-DISTNAME=	pycurl-7.45.3
+DISTNAME=	pycurl-7.45.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//}
-PKGREVISION=	5
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pycurl/}
 
@@ -14,11 +13,10 @@ LICENSE=	gnu-lgpl-v2.1 OR mit
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 TEST_DEPENDS+=	${PYPKGPREFIX}-bottle-[0-9]*:../../www/py-bottle
 TEST_DEPENDS+=	${PYPKGPREFIX}-flaky-[0-9]*:../../devel/py-flaky
+TEST_DEPENDS+=	${PYPKGPREFIX}-flask-[0-9]*:../../www/py-flask
 
 MAKE_ENV+=	PYCURL_SSL_LIBRARY=openssl
 INSTALL_ENV+=	PYCURL_SSL_LIBRARY=openssl
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 BUILDLINK_API_DEPENDS.curl+=	curl>=7.19.0
 .include "../../www/curl/buildlink3.mk"
