--- a/devel/ruby-redmine51/Makefile
+++ b/devel/ruby-redmine51/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.7 2024/12/13 16:31:18 taca Exp $
+# $NetBSD: Makefile,v 1.8 2024/12/15 12:38:27 taca Exp $
 
 DISTNAME=	redmine-${RM_VERSION}
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME:S/redmine/redmine${RM_VER}/}
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	https://www.redmine.org/releases/
 
