--- a/x11/tinyx-wscons/Makefile
+++ b/x11/tinyx-wscons/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.9 2024/11/30 07:34:02 nat Exp $
+# $NetBSD: Makefile,v 1.10 2024/12/16 03:27:08 nat Exp $
 
-VERSION=	0.5
+VERSION=	0.6
 GITHUB_PROJECT=	tinyx-wscons
 DISTNAME=	${GITHUB_PROJECT}-${VERSION}
 
-PKGREVISION=	1
+#PKGREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_GITHUB:=AceHusky12/}
 EXTRACT_SUFX=	.zip
