--- a/www/R-bslib/Makefile
+++ b/www/R-bslib/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2023/06/15 06:58:31 mef Exp $
+# $NetBSD: Makefile,v 1.5 2024/12/16 04:39:35 mef Exp $
 
 R_PKGNAME=	bslib
-R_PKGVER=	0.4.2
+R_PKGVER=	0.8.0
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -12,11 +12,14 @@ DEPENDS+=	R-cachem-[0-9]*:../../devel/R-cachem
 DEPENDS+=	R-htmltools>=0.5.1:../../textproc/R-htmltools
 DEPENDS+=	R-jquerylib-[0-9]*:../../www/R-jquerylib
 DEPENDS+=	R-jsonlite>=1.7.1:../../textproc/R-jsonlite
+DEPENDS+=	R-lifecycle-[0-9]*:../../devel/R-lifecycle
 DEPENDS+=	R-magrittr>=2.0.1:../../devel/R-magrittr
 DEPENDS+=	R-memoise-[0-9]*:../../devel/R-memoise
 DEPENDS+=	R-rlang>=0.4.11:../../devel/R-rlang
 DEPENDS+=	R-sass>=0.4.0:../../www/R-sass
 DEPENDS+=	R-mime-[0-9]*:../../mail/R-mime
+
+# Package suggested but not available: 'bsicons', 'future'
 
 TEST_DEPENDS+=	R-curl-[0-9]*:../../www/R-curl
 TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
