--- a/www/R-diffviewer/Makefile
+++ b/www/R-diffviewer/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2022/05/02 14:19:29 mef Exp $
+# $NetBSD: Makefile,v 1.3 2024/12/16 04:57:28 mef Exp $
 
 R_PKGNAME=	diffviewer
-R_PKGVER=	0.1.1
+R_PKGVER=	0.1.2
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -13,6 +13,12 @@ DEPENDS+=	R-htmlwidgets>=1.3:../../www/R-htmlwidgets
 
 TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
 TEST_DEPENDS+=	R-shiny-[0-9]*:../../www/R-shiny
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	# none
 
