--- a/devel/py-ninja/Makefile
+++ b/devel/py-ninja/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.4 2024/11/30 20:13:18 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2024/12/16 05:45:04 adam Exp $
 
-DISTNAME=	ninja-1.11.1.2
+DISTNAME=	ninja-1.11.1.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=n/ninja/}
